[gd_scene load_steps=70 format=3 uid="uid://dv34dfrll1ny1"]

[ext_resource type="Script" uid="uid://bbejxncmxs84j" path="res://Script/BossLevel.gd" id="1_6210o"]
[ext_resource type="Texture2D" uid="uid://dejrwhdgydt1b" path="res://Sprite/BG/BG_FULL.png" id="2_ey4v6"]
[ext_resource type="Texture2D" uid="uid://cxtqcyowin570" path="res://Sprite/BG/Door1.png" id="3_jmfok"]
[ext_resource type="PackedScene" uid="uid://b67pvcym713ir" path="res://Scene/JumoBoss.tscn" id="4_3b8vg"]
[ext_resource type="Texture2D" uid="uid://brhdjv0s50ksd" path="res://Sprite/Shadow/Shadow.png" id="4_g1o07"]
[ext_resource type="Texture2D" uid="uid://ds3e58sksl5fm" path="res://Sprite/BG/Torch1.png" id="4_tgbpb"]
[ext_resource type="Texture2D" uid="uid://c5o5fpfcx807y" path="res://Sprite/BG/Torch2.png" id="5_eu6r5"]
[ext_resource type="Texture2D" uid="uid://cr7uepfxsrmqt" path="res://Sprite/Shadow/Shadow_2.png" id="5_ey4v6"]
[ext_resource type="Texture2D" uid="uid://cptmg7k8q6dik" path="res://Sprite/BG/Torch3.png" id="6_f5v0o"]
[ext_resource type="Texture2D" uid="uid://d0gt3ers75mkt" path="res://Sprite/Shadow/Shadow_3.png" id="6_jmfok"]
[ext_resource type="Script" uid="uid://cqbffiaqbawns" path="res://Script/cashier_zone.gd" id="7_jltb5"]
[ext_resource type="SpriteFrames" uid="uid://cp1ilsbuubrbc" path="res://Resorces/MinigameCoinFrames.tres" id="8_hrymr"]
[ext_resource type="Texture2D" uid="uid://capkovydn2v7g" path="res://Sprite/shelf/What_7.png" id="9_xkkke"]
[ext_resource type="Texture2D" uid="uid://cmjyhgpg2gv6b" path="res://Sprite/shelf/Coin/Ecoin1.png" id="10_xi0w7"]
[ext_resource type="Texture2D" uid="uid://dt3h8351u8rp5" path="res://Sprite/shelf/Coin/Ecoin2.png" id="11_t6hlr"]
[ext_resource type="Texture2D" uid="uid://sm2h0l2keg4m" path="res://Sprite/shelf/Coin/Ecoin3.png" id="12_nxjys"]
[ext_resource type="Texture2D" uid="uid://c6f0517k8t2ne" path="res://Sprite/shelf/Coin/Ecoin4.png" id="13_8iudi"]
[ext_resource type="Texture2D" uid="uid://buawdqr54se7c" path="res://Sprite/shelf/Coin/Ecoin5.png" id="14_twlfd"]
[ext_resource type="Texture2D" uid="uid://bdrs30btf5oc6" path="res://Sprite/shelf/Coin/Ecoin6.png" id="15_djggg"]
[ext_resource type="FontFile" uid="uid://bjvinrnu5nnxa" path="res://Resorces/m5x7.ttf" id="16_kiqou"]
[ext_resource type="Texture2D" uid="uid://clh7pbsfxb6yd" path="res://Sprite/shelf/pixil-frame-0 (5).png" id="17_7p317"]
[ext_resource type="Script" uid="uid://brob5tdvm2fjp" path="res://Script/QueueSign.gd" id="18_mkvf8"]
[ext_resource type="PackedScene" uid="uid://csch13p5msvkg" path="res://Scene/StockPile.tscn" id="19_eucnl"]
[ext_resource type="Texture2D" uid="uid://gkpjsis8l3na" path="res://Sprite/shelf/SSH_4.png" id="21_ceilw"]
[ext_resource type="Texture2D" uid="uid://s05s3mtng618" path="res://Sprite/shelf/SSH_1.png" id="22_g1o07"]
[ext_resource type="Texture2D" uid="uid://cr0ka2m5s3l0d" path="res://Sprite/shelf/SSH_3.png" id="23_ey4v6"]
[ext_resource type="Texture2D" uid="uid://btww0q22tl5ov" path="res://Sprite/shelf/SSH_2.png" id="24_jmfok"]
[ext_resource type="Texture2D" uid="uid://b6e3a5fx2w2ed" path="res://Sprite/shelf/SSH_5.png" id="25_ceilw"]
[ext_resource type="Texture2D" uid="uid://dp67x883vu5f6" path="res://Sprite/shelf/SSH_7.png" id="25_g1o07"]
[ext_resource type="Texture2D" uid="uid://cu2wt5llf06s5" path="res://Sprite/shelf/SSH_6.png" id="26_ceilw"]
[ext_resource type="PackedScene" uid="uid://tws0wveogunt" path="res://Scene/Shelf.tscn" id="27_gj1vx"]
[ext_resource type="Texture2D" uid="uid://dyb8pgncyvlfj" path="res://Sprite/shelf/Sh3lf_1.png" id="28_o0qy5"]
[ext_resource type="Texture2D" uid="uid://souoqcu88ft8" path="res://Sprite/shelf/Sh3lf_2.png" id="29_f6pgk"]
[ext_resource type="Texture2D" uid="uid://b410u1rw3nvt1" path="res://Sprite/shelf/Default_Shelf.png" id="29_tgbpb"]
[ext_resource type="SpriteFrames" uid="uid://cnlbtf2dllnjd" path="res://Resorces/Sprite_Cola.tres" id="30_eu6r5"]
[ext_resource type="Texture2D" uid="uid://dxers6w81u71e" path="res://Sprite/shelf/Sh3lf_3.png" id="30_j3icx"]
[ext_resource type="PackedScene" uid="uid://65lswhnnonmy" path="res://Scene/Shelf_Column.tscn" id="31_40xhb"]
[ext_resource type="SpriteFrames" uid="uid://yfk8gtwlpslg" path="res://Resorces/Sprite_Pepsi.tres" id="32_f5v0o"]
[ext_resource type="Texture2D" uid="uid://dv3pt8dshvd5f" path="res://Sprite/shelf/Shelf_9.png" id="32_y7p03"]
[ext_resource type="Texture2D" uid="uid://bop1k4rg86y5g" path="res://Sprite/shelf/Shelf_7.png" id="33_5awcm"]
[ext_resource type="Texture2D" uid="uid://uadi7he8lgfp" path="res://Sprite/shelf/Shelf_8.png" id="34_52yt0"]
[ext_resource type="SpriteFrames" uid="uid://p2u5223dnhqh" path="res://Resorces/Sprite_Sprite.tres" id="34_jltb5"]
[ext_resource type="SpriteFrames" uid="uid://0qndh2gwbvxy" path="res://Resorces/Sprite_Coke.tres" id="36_hrymr"]
[ext_resource type="PackedScene" uid="uid://d1b8rrv1u73gp" path="res://Scene/WatchingBird.tscn" id="42_4jxbe"]
[ext_resource type="PackedScene" uid="uid://dt6myf7lkv4tw" path="res://Scene/UserInterface.tscn" id="43_4y77y"]
[ext_resource type="PackedScene" uid="uid://l1bhryukeiwu" path="res://Scene/player.tscn" id="44_4kkl6"]
[ext_resource type="PackedScene" uid="uid://twkkl6x53d4o" path="res://Scene/Fade_transition.tscn" id="45_akgdu"]
[ext_resource type="PackedScene" uid="uid://bvov4ngvfynj3" path="res://Scene/PauseMenu.tscn" id="48_tgbpb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3qma8"]
size = Vector2(25, 395.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60ewi"]
size = Vector2(377.5, 1055.0001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17yhb"]
size = Vector2(25, 198.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajkoj"]
atlas = ExtResource("4_tgbpb")
region = Rect2(0, 0, 272, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajwgv"]
atlas = ExtResource("5_eu6r5")
region = Rect2(0, 0, 272, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgk27"]
atlas = ExtResource("6_f5v0o")
region = Rect2(0, 0, 272, 272)

[sub_resource type="SpriteFrames" id="SpriteFrames_pt8na"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajkoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajwgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgk27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajkoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajwgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajkoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajwgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajkoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgk27")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_637vb"]
size = Vector2(242, 215)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqm8m"]
atlas = ExtResource("10_xi0w7")
region = Rect2(0, 0, 560, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6u1a"]
atlas = ExtResource("11_t6hlr")
region = Rect2(0, 0, 560, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_r86c8"]
atlas = ExtResource("12_nxjys")
region = Rect2(0, 0, 560, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_qim27"]
atlas = ExtResource("13_8iudi")
region = Rect2(0, 0, 560, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_76qe0"]
atlas = ExtResource("14_twlfd")
region = Rect2(0, 0, 560, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3fn6"]
atlas = ExtResource("15_djggg")
region = Rect2(0, 0, 560, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_ajkoj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqm8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6u1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r86c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qim27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76qe0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3fn6")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_55t6b"]
line_spacing = 0.0
font = ExtResource("16_kiqou")
font_size = 34
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofkvw"]
bg_color = Color(0.28235295, 0, 0, 1)
border_width_top = 20
border_width_bottom = 20
border_color = Color(0.9529412, 0.7254902, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4kkk5"]
font = ExtResource("16_kiqou")
font_size = 54
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jmfok"]
font = ExtResource("16_kiqou")
font_size = 67
font_color = Color(1, 0, 0, 1)
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_35kj7"]
font = ExtResource("16_kiqou")
font_size = 150
font_color = Color(1, 0, 0, 1)
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eg5u8"]
font = ExtResource("16_kiqou")
font_size = 132
font_color = Color(1, 0, 0, 1)

[node name="BossLevel" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_6210o")
watching_bird_scene = ExtResource("42_4jxbe")

[node name="BG" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(640.00006, 411.99997)
scale = Vector2(1.0004395, 1.1958449)
texture = ExtResource("2_ey4v6")
metadata/_edit_lock_ = true

[node name="Shadow" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Shadow"]
z_index = -1
position = Vector2(752.00006, 482.75)
scale = Vector2(0.26689816, 0.21898155)
texture = ExtResource("4_g1o07")

[node name="Sprite2D2" type="Sprite2D" parent="Shadow"]
z_index = -1
position = Vector2(752, 652)
scale = Vector2(0.26689816, 0.21898155)
texture = ExtResource("4_g1o07")

[node name="Sprite2D3" type="Sprite2D" parent="Shadow"]
z_index = -1
position = Vector2(1033, 650.99994)
scale = Vector2(0.26689816, 0.21898155)
texture = ExtResource("4_g1o07")

[node name="Sprite2D4" type="Sprite2D" parent="Shadow"]
z_index = -1
position = Vector2(1033, 481.99994)
scale = Vector2(0.26689816, 0.21898155)
texture = ExtResource("4_g1o07")

[node name="Sprite2D5" type="Sprite2D" parent="Shadow"]
z_index = -2
position = Vector2(485.46878, 299)
scale = Vector2(0.12690964, 0.6481482)
texture = ExtResource("4_g1o07")

[node name="Sprite2D6" type="Sprite2D" parent="Shadow"]
z_index = -2
position = Vector2(1223.5, 449.00003)
scale = Vector2(0.15277778, 0.5574074)
texture = ExtResource("5_ey4v6")

[node name="Sprite2D7" type="Sprite2D" parent="Shadow"]
z_index = -2
position = Vector2(80, 625)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_jmfok")

[node name="Sprite2D9" type="Sprite2D" parent="Shadow"]
z_index = -1
position = Vector2(160.5, 143)
scale = Vector2(0.37870374, 0.21898155)
texture = ExtResource("4_g1o07")

[node name="Map Border" type="StaticBody2D" parent="."]
position = Vector2(65, 45)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map Border"]
position = Vector2(-65, -45)
polygon = PackedVector2Array(-93, -109, 1401, -111, 1403, 834, -106, 845, -103, 720, 1280, 720, 1280, 100, 0, 100, 0, 720, -102, 699)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map Border"]
position = Vector2(257.5, 476.75)
shape = SubResource("RectangleShape2D_3qma8")

[node name="Hitbox" type="CollisionShape2D" parent="Map Border"]
position = Vector2(419, 160)
scale = Vector2(0.19999996, 0.19999996)
shape = SubResource("RectangleShape2D_60ewi")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Map Border"]
position = Vector2(257.5, 4.75)
shape = SubResource("RectangleShape2D_17yhb")

[node name="DoorSprite" type="Sprite2D" parent="."]
position = Vector2(978, 50.000004)
scale = Vector2(0.2967915, 0.29679146)
texture = ExtResource("3_jmfok")
metadata/_edit_lock_ = true

[node name="Torch" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(291, 425)
scale = Vector2(0.2867647, 0.32352942)
sprite_frames = SubResource("SpriteFrames_pt8na")
autoplay = "default"
frame_progress = 0.58751625
offset = Vector2(0, -80)

[node name="CashierZone" type="Area2D" parent="."]
z_index = -1
position = Vector2(506, 209.50002)
collision_layer = 7
collision_mask = 7
script = ExtResource("7_jltb5")
coin_frames = ExtResource("8_hrymr")
coin_scale_modifier = 0.15
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CashierZone"]
position = Vector2(-14, -3.5)
shape = SubResource("RectangleShape2D_637vb")

[node name="WorkTimer" type="Timer" parent="CashierZone"]
wait_time = 2.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="CashierZone"]
z_index = -1
position = Vector2(-31, 1.4999847)
scale = Vector2(0.069843754, 0.069843754)
texture = ExtResource("9_xkkke")

[node name="CoinEffect" type="AnimatedSprite2D" parent="CashierZone"]
visible = false
position = Vector2(-1.9073486e-06, 0.4999842)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_ajkoj")
frame_progress = 0.91665864
offset = Vector2(-220, -80)

[node name="PromptLabel" type="Label" parent="CashierZone"]
visible = false
z_index = 2
offset_left = -80.0
offset_top = -29.500015
offset_right = 44.0
offset_bottom = -1.5000153
text = "[E] interact"
label_settings = SubResource("LabelSettings_55t6b")

[node name="MinigameLayer" type="CanvasLayer" parent="CashierZone"]

[node name="Background" type="Panel" parent="CashierZone/MinigameLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ofkvw")

[node name="QueueSign" type="Sprite2D" parent="."]
z_index = -1
y_sort_enabled = true
position = Vector2(483.43643, 299.7)
scale = Vector2(0.32159072, 0.32159072)
texture = ExtResource("17_7p317")

[node name="QueueSign2" type="Label" parent="."]
z_index = 2
offset_left = 458.0
offset_top = 273.0
offset_right = 512.0
offset_bottom = 316.0
text = "0/8"
label_settings = SubResource("LabelSettings_4kkk5")
script = ExtResource("18_mkvf8")

[node name="DoorPosition" type="Marker2D" parent="."]
position = Vector2(977, 19)

[node name="CashierStand" type="Marker2D" parent="."]
position = Vector2(627, 210)

[node name="JumoStart" type="Marker2D" parent="."]
position = Vector2(619, -218)

[node name="WallSpots" type="Node2D" parent="."]

[node name="Marker1" type="Marker2D" parent="WallSpots"]
position = Vector2(391, 132)

[node name="Marker2" type="Marker2D" parent="WallSpots"]
position = Vector2(890, 131)

[node name="Marker3" type="Marker2D" parent="WallSpots"]
position = Vector2(1175, 133)

[node name="SlimeSpots" type="Node2D" parent="."]

[node name="Puddle1" type="Marker2D" parent="SlimeSpots"]
position = Vector2(481, 403)

[node name="Puddle2" type="Marker2D" parent="SlimeSpots"]
position = Vector2(889, 517)

[node name="Puddle3" type="Marker2D" parent="SlimeSpots"]
position = Vector2(887, 271)

[node name="Puddle4" type="Marker2D" parent="SlimeSpots"]
position = Vector2(549, 595)

[node name="BirdSpots" type="Node2D" parent="." groups=["BirdSpots"]]

[node name="BirdMarker1" type="Marker2D" parent="BirdSpots"]
position = Vector2(735, 131)

[node name="BirdMarker2" type="Marker2D" parent="BirdSpots"]
position = Vector2(401, 656)

[node name="BirdMarker3" type="Marker2D" parent="BirdSpots"]
position = Vector2(274, 656)
scale = Vector2(-1, 1)

[node name="BirdMarker4" type="Marker2D" parent="BirdSpots"]
position = Vector2(1207, 127)
scale = Vector2(-1, 1)

[node name="Stock1" parent="." instance=ExtResource("19_eucnl")]
y_sort_enabled = true
position = Vector2(77, 142)
stock_image = ExtResource("21_ceilw")

[node name="Stock2" parent="." instance=ExtResource("19_eucnl")]
y_sort_enabled = true
position = Vector2(232, 142)
item_name = "Coke"
stock_image = ExtResource("22_g1o07")

[node name="Stock3" parent="." instance=ExtResource("19_eucnl")]
y_sort_enabled = true
position = Vector2(78, 252)
item_name = "Sprite"
stock_image = ExtResource("23_ey4v6")

[node name="Stock4" parent="." instance=ExtResource("19_eucnl")]
y_sort_enabled = true
position = Vector2(77, 362)
item_name = "Pepsi"
stock_image = ExtResource("24_jmfok")

[node name="Stock5" parent="." instance=ExtResource("19_eucnl")]
y_sort_enabled = true
position = Vector2(77, 472)
item_name = "Fanta"
stock_image = ExtResource("25_g1o07")

[node name="Stock6" parent="." instance=ExtResource("19_eucnl")]
y_sort_enabled = true
position = Vector2(77, 582)
item_name = "Est"
stock_image = ExtResource("26_ceilw")

[node name="Stock7" parent="." instance=ExtResource("19_eucnl")]
y_sort_enabled = true
position = Vector2(77, 692)
item_name = "Sarsi"
stock_image = ExtResource("25_ceilw")

[node name="Shelf1" parent="." instance=ExtResource("27_gj1vx")]
y_sort_enabled = true
position = Vector2(750, 630)
shelf_image = ExtResource("29_tgbpb")
item_frames = ExtResource("30_eu6r5")

[node name="Shelf2" parent="." instance=ExtResource("27_gj1vx")]
y_sort_enabled = true
position = Vector2(750, 460)
required_item = "Pepsi"
shelf_image = ExtResource("29_f6pgk")
item_frames = ExtResource("32_f5v0o")

[node name="Shelf3" parent="." instance=ExtResource("27_gj1vx")]
y_sort_enabled = true
position = Vector2(1030, 460)
required_item = "Sprite"
shelf_image = ExtResource("28_o0qy5")
item_frames = ExtResource("34_jltb5")

[node name="Shelf4" parent="." instance=ExtResource("27_gj1vx")]
y_sort_enabled = true
position = Vector2(1030, 630)
required_item = "Coke"
shelf_image = ExtResource("30_j3icx")
item_frames = ExtResource("36_hrymr")

[node name="Shelf5" parent="." instance=ExtResource("31_40xhb")]
position = Vector2(1251, 361)
required_item = "Fanta"
shelf_image = ExtResource("32_y7p03")
metadata/_edit_lock_ = true

[node name="Shelf6" parent="." instance=ExtResource("31_40xhb")]
position = Vector2(1251, 541)
required_item = "Est"
shelf_image = ExtResource("33_5awcm")

[node name="Shelf7" parent="." instance=ExtResource("31_40xhb")]
position = Vector2(1251, 721)
required_item = "Sarsi"
shelf_image = ExtResource("34_52yt0")

[node name="UI_Layer" type="CanvasLayer" parent="."]
visible = false

[node name="HUD" parent="UI_Layer" instance=ExtResource("43_4y77y")]
offset_left = 612.0
offset_top = 8.0
offset_right = 652.0
offset_bottom = 48.0

[node name="BossUI" type="CanvasLayer" parent="."]

[node name="IncomingLabel" type="Label" parent="BossUI"]
z_index = 1
offset_left = 956.0
offset_top = 15.0
offset_right = 1006.0
offset_bottom = 69.0
size_flags_horizontal = 4
text = "0"
label_settings = SubResource("LabelSettings_jmfok")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="BossUI"]
offset_left = 519.0
offset_top = -17.0
offset_right = 707.0
offset_bottom = 102.0
text = "2:00"
label_settings = SubResource("LabelSettings_35kj7")

[node name="BlackScreen" type="ColorRect" parent="BossUI"]
z_index = 2
offset_right = 1279.0
offset_bottom = 718.0
color = Color(0, 0, 0, 1)

[node name="CutsceneLabel" type="Label" parent="BossUI/BlackScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.5
offset_top = -80.0
offset_right = 321.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "HE IS COMING..."
label_settings = SubResource("LabelSettings_eg5u8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" parent="." groups=["Player"] instance=ExtResource("44_4kkl6")]
y_sort_enabled = true
position = Vector2(264, 279)

[node name="JumoBoss" parent="." instance=ExtResource("4_3b8vg")]
position = Vector2(615, -230)

[node name="Fade_transition" parent="." instance=ExtResource("45_akgdu")]
visible = false
z_index = 10

[node name="PauseMenu" parent="." instance=ExtResource("48_tgbpb")]
